# mpix-harmonize

./: CMakeLists.txt  LICENSE  README.md  mpix-harmonize.pc.in  mpix_harmonize.c  mpix_harmonize.h  mpixharmonize-config.cmake.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/: Makefile.in  configure  configure.ac  env.sh
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/collective/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/collective/blocking/: Makefile.am  Makefile.in  osu_allreduce.c  osu_bcast.c  osu_harmonize.h  osu_reduce.c
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/collective/neighborhood/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/collective/non_blocking/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/one-sided/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/pt2pt/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/pt2pt/persistent/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/pt2pt/standard/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/mpi/startup/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/nccl/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/nccl/collective/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/nccl/pt2pt/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/openshmem/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/upc/: Makefile.in
benchmarks/osu-micro-benchmarks-7.1-1-harmonize/c/upcxx/: Makefile.in
